k8s/http-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-gateway
  labels:
    app: http-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-gateway
  template:
    metadata:
      labels:
        app: http-gateway
    spec:
      containers:
        - name: http-gateway
          image: netologygroup/http-gateway:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1Gi
