k8s/http-gateway-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-gateway-headless
spec:
  selector:
    app: http-gateway
  clusterIP: None
