k8s/http-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-gateway-service
spec:
  selector:
    app: http-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
