k8s/http-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-gateway-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: http.svc.example.org
      http:
        paths:
          - path: /
            backend:
              serviceName: http-gateway-service
              servicePort: 8080
  tls:
    - secretName: tls-certificates 
      hosts:
        - http.svc.example.org
